--- a/Torrent2Drive_server/.env
+++ b/Torrent2Drive_server/.env
@@ -1,3 +1,4 @@
 GOOGLE_CLIENT_ID=1013450882754-qju9vh0fe3j5hh54p0pa49k77aio0jok.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=N1Hvja3QPfYCB7FCG9Wno43u
 SECRET=T2G@VueJS // any string you prefer // set a custom secret for cookie-session
+VUE_APP_BASEURL=http://aatg.herokuapp.com
